--- a/jdk10/pom.xml
+++ b/jdk10/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>10</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.thegreatapi.newjdkfeatures</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
